WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91355
Fix calculation of rgba's alpha in CSS custom text
https://bugs.webkit.org/show_bug.cgi?id=91355
Summary
Fix calculation of rgba's alpha in CSS custom text
Mike Lawther
Reported
2012-07-15 20:26:40 PDT
Fix calculation of rgba's alpha in CSS custom text
Attachments
Patch
(8.85 KB, patch)
2012-07-15 20:31 PDT
,
Mike Lawther
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cq-04
(923.76 KB, application/zip)
2012-07-15 21:39 PDT
,
WebKit Review Bot
no flags
Details
Patch for landing
(9.83 KB, patch)
2012-07-15 21:48 PDT
,
Mike Lawther
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mike Lawther
Comment 1
2012-07-15 20:31:10 PDT
Created
attachment 152471
[details]
Patch
Ryosuke Niwa
Comment 2
2012-07-15 20:38:36 PDT
Comment on
attachment 152471
[details]
Patch Finally! I think I've filed a bug about this a long time ago.
Ryosuke Niwa
Comment 3
2012-07-15 20:39:54 PDT
***
Bug 42012
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 4
2012-07-15 21:39:18 PDT
Comment on
attachment 152471
[details]
Patch Rejecting
attachment 152471
[details]
from commit-queue. New failing tests: media/track/track-cue-rendering.html Full output:
http://queues.webkit.org/results/13243855
WebKit Review Bot
Comment 5
2012-07-15 21:39:22 PDT
Created
attachment 152472
[details]
Archive of layout-test-results from gce-cq-04 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: gce-cq-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Mike Lawther
Comment 6
2012-07-15 21:48:54 PDT
Created
attachment 152473
[details]
Patch for landing
WebKit Review Bot
Comment 7
2012-07-15 22:26:37 PDT
Comment on
attachment 152473
[details]
Patch for landing Clearing flags on attachment: 152473 Committed
r122694
: <
http://trac.webkit.org/changeset/122694
>
WebKit Review Bot
Comment 8
2012-07-15 22:26:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug