Fix calculation of rgba's alpha in CSS custom text https://bugs.webkit.org/show_bug.cgi?id=91355

Reviewed by Ryosuke Niwa.

Source/WebCore:

Alpha values are stored as an 8 bit value. To convert this to a float in the
range [0,1], we need to divide by 255, not 256.

Test: fast/css/rgba-custom-text.html

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::customCssText):

LayoutTests:

* css3/calc/color-hsl-expected.txt:
* css3/calc/color-rgb-expected.txt:
* editing/execCommand/query-command-value-background-color-expected.txt:
* editing/execCommand/query-command-value-background-color.html:
* fast/css/rgba-custom-text-expected.txt: Added.
* fast/css/rgba-custom-text.html: Added.
* media/track/track-cue-rendering-expected.txt:


Canonical link: https://commits.webkit.org/109166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122694 268f45cc-cd09-0410-ab3c-d52691b4dbfc